--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: GeoViz
 Title: Spatial Data Visualization
 Version: 0.0.0.9000
 Authors@R: person('Wei', 'Jiang', email = 'w4356y@163.com', role = c('cre', 'aut'))
-Description: For easily visalize spatial data.
+Description: For easily visualize spatial data.
 License: Apache License (>= 2.0)
 Imports: 
     config,
@@ -22,5 +22,5 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-URL: https://github.com/w4356y/GeoViz
-BugReports: https://github.com/w4356y/GeoViz/issues
+URL: https://github.com/w4356y/GeoViz.git
+BugReports: https://github.com/w4356y/GeoViz.git/issues
